--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,146 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261564876623981%22%3A%22jqesI6i1%22%2C%2261572944103820%22%3A%22N7Rj4po2%22%2C%2261573442422753%22%3A%222Fuo2Sv9%22%2C%2261571941988228%22%3A%22YM6mQV3Q%22%2C%2261568429165277%22%3A%22xGx47Fk1%22%2C%2261572683333662%22%3A%22cC1RlVRe%22%2C%2261575215649475%22%3A%22D2UfcFTM%22%2C%2261575683953447%22%3A%22PdBbQ0wg%22%2C%2261573194392568%22%3A%221RhOR0RJ%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "datr",
+        "value": "S19JZzarjtKfjvEH1zGtKC7u",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "sb",
+        "value": "S19JZxAa0XVULimzUvgi-ace",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "dpr",
+        "value": "3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "oo",
+        "value": "v1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x820",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61573194392568",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "fr",
+        "value": "0HKIFN4SdyPtSwgJd.AWcCwAWQ4V9JXHVj8f7rIVzWSW1qE6m1793rTD0SSIUKZ7006b4.BoGcop..AAA.0.0.BoGcpi.AWeFFAqYGtR6KLpxoLEcs0ZZ-nI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "xs",
+        "value": "29%3AaGy1O3CeTu2QuA%3A2%3A1746520675%3A-1%3A14806",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "locale",
+        "value": "bn_IN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101632683%3BT%3A29109038",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2806%3Btimestamp%3A1746520722",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B544x360x3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-06T14:39:15.281Z",
+        "lastAccessed": "2025-05-06T14:39:15.281Z"
+    }
+]
